--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Fir Test",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "/${workspaceFolder}/../mgpusim/samples/fir",
+            "args": [
+                "-timing", "-trace-mem"
+            ],
+            "env": {
+                "AKITA_DAISEN_DEV_SERVER": "http://localhost:5173"
+            }
+        },
+        {
             "name": "Daisen Server",
             "type": "go",
             "request": "launch",
